--- a/src/components/cards/planCard/PlanCard.css
+++ b/src/components/cards/planCard/PlanCard.css
@@ -45,7 +45,7 @@
 
 .plancard-container button {
   border: 3px solid var(--primary-color);
-  border-radius: 20px;
+  border-radius: 2rem;
   background-color: transparent;
   padding: 1rem 3rem;
   color: var(--primary-color);
