--- a/src/utilities/Components/Hamburger/Hamburger.css
+++ b/src/utilities/Components/Hamburger/Hamburger.css
@@ -13,8 +13,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 2rem;
-  gap: 1rem;
+  font-size: 6rem;
+  gap: 3rem;
+  padding-left: 4rem;
 }
 
 .menu-options-ham li {
@@ -22,7 +23,7 @@
 }
 
 .menu-options-ham button {
-  font-size: 2rem;
+  font-size: 6rem;
 }
 
 .ham-btn-login {
@@ -34,11 +35,13 @@
   color: var(--background-color);
   background-color: var(--black-color);
   margin-right: auto;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .ham-btn-primary {
   padding: 1rem 3rem;
-  width: 25rem;
+  width: 80%;
   background-color: var(--black-color);
   border: 1px solid var(--background-color);
   border-radius: 0.5rem;
@@ -48,5 +51,5 @@
 }
 
 .drawer-open{
-  top: 4rem;
+  top: 15rem;
 }
